Fixed menu layout issue accross all browsers, was popping up to high.

--- a/crowbar_framework/app/assets/stylesheets/_layout.sass
+++ b/crowbar_framework/app/assets/stylesheets/_layout.sass
@@ -44,7 +44,7 @@ header
           background: $page_bg
           position: absolute
           right: 0
-          top: 18px
+          top: 20px
           width: 150px
           li
             display: inline
